--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -258,7 +258,7 @@
   </div> -->
 
   <h4 class="text-enlaces-agenda-completa">
-    Para ver la agenda deportiva<!--completa-->, visita la web de&nbsp;
+    Para ver la agenda completa, visita la web de&nbsp;
     <a href="https://www.futbolenlatv.es/" class="link-futboltv" target="_blank"
       >Fútbol en la TV
       <span style="vertical-align: middle"
