Actualizar instrucciones para reproducir enlaces en Android y Windows en la sección de cómo reproducir enlaces Ace Stream

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -420,10 +420,8 @@
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
     <p class="how-to-play-text">
       Para reproducir los enlaces en tu Android, una vez instalado Ace Stream,
-      puedes abrir el enlace haciendo clic en él directamente, lo que abrirá Ace
-      Stream y reproducirá el contenido. También puedes copiar el enlace, abrir
-      Ace Stream manualmente y pegar el enlace en el cuadro de texto "Enter
-      content link".
+      puedes abrir el enlace haciendo clic en él directamente, y dándole a reproducir en Ace Player. También puedes copiar el enlace, abrir
+      Ace Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca aquí el enlace al contenido".
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
@@ -447,8 +445,8 @@
       recomendable cambiar ciertos parámetros en la configuración de Ace Stream
       y de Ace Player (de Ace Player, solo en Windows). Primero, haz clic
       derecho sobre el icono de Ace Stream en la barra de tareas y selecciona
-      "Options..." (En Android ir a la configuración). Allí, cambia los valores
-      de "VOD buffer" a 10 y "Live buffer" a 60. Después, en Ace Player, ve en
+      "Options..." (En Android, ir a los tres puntitos y ajustes). Allí, cambia los valores
+      de "VOD buffer" a 10 y "Live buffer" a 60 (En Android ir a Config. Ace Engine y Otros ajustes). Después, en Ace Player, ve en
       la parte de arriba a "Herramientas"
       <i class="bi bi-arrow-right"></i> "Preferencias"
       <i class="bi bi-arrow-right"></i> "Vídeo" y en Desentrelazado selecciona
