Actualizar estilos de la sección del reloj y mejorar la alineación del iframe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -150,13 +150,9 @@
       <!-- Reloj SIEMPRE dentro del navbar-container, a la derecha -->
       <div class="time-clock" style="margin-left: 1.5rem">
         <i class="bi bi-clock"></i>
-        <iframe
-          src="https://free.timeanddate.com/clock/i9n4hxch/n327/tles4/fn12/fs18/fcfff/tc000/pcccc/ftb/bls0/brs0/bts4/th1"
-          frameborder="0"
-          width="92"
-          height="25"
-          style="vertical-align: middle"
-        ></iframe>
+        <iframe src="https://free.timeanddate.com/clock/ia11xfrm/n327/tles4/fn2/fs20/fcfff/tct/pct/ftb/th1" frameborder="0" width="95" height="30" allowtransparency="true"></iframe>
+
+
       </div>
     </div>
   </nav>
