--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -269,6 +269,7 @@ html {
 .time-clock {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 5px;
   margin-bottom: 7px;
   margin-left: 1rem;
@@ -277,6 +278,8 @@ html {
 
 .time-clock iframe {
   margin-left: 0.6rem;
+  display: flex;
+  align-items: center;
 }
 
 .text-enlaces-agenda-completa {
