--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,11 +30,10 @@
         </button>
         <div class="navbar-logo">
           <img
-            src="/images/balon.png"
+            src="/images/logo.png"
             alt="Logo"
             class="logo"
-            width="50"
-            height="60"
+            style="max-width: 100%; height: auto; width: auto; max-height: 70px; object-fit: contain;"
           />
         </div>
         <div
