--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -370,11 +370,7 @@
           "
         />
       </a>
-      <a
-        href="https://www.rbtvplus01.com/es"
-        target="_blank"
-        class="otra-web-link"
-      >
+       <a href="https://www.rbtvplus01.com/es" target="_blank" class="otra-web-link" style="text-decoration: none;">
         <img
           src="https://statics2.mfctai51.xyz/img/rb/web-logo-rbplus.png"
           alt="RBTV+"
@@ -386,6 +382,7 @@
             border-radius: 12px;
           "
         />
+        <span style="display: block; margin-top: 8px; font-size: 0.9rem; color: white; text-align: center;">No requiere Ace Stream</span>
       </a>
     </div>
   </div>
