Actualizar texto de instrucciones para Windows en la sección de Ace Stream

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -416,7 +416,7 @@
       Ace Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca aquí el enlace al contenido".
     </p>
 
-    <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
+    <h4 style="color: white; margin: 0 20px 20px 29px">Windows (PC o portátil)</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
       los enlaces: la primera es haciendo clic directamente en el enlace,
