Actualizar instrucciones de descarga de Ace Stream para mayor claridad y corregir información sobre dispositivos Apple

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -392,21 +392,20 @@
     <div class="mini-separator"></div>
     <p class="how-to-play-text">
       Para reproducir los enlaces Ace Stream en tu dispositivo necesitas tener
-      instalado Ace Stream Media. Si no lo tienes instalado, puedes descargarlo
-      desde la página oficial de Ace Stream haciendo clic
+      instalado Ace Stream Media. Para Windows, puedes descargarlo 
+      desde la página oficial de Ace Stream, haciendo clic
       <a href="https://www.acestream.org/?page=products" target="_blank">aquí</a
-      >, o desde
+      >. Para Android, puedes descargarlo desde la
       <a
         href="https://play.google.com/store/apps/details?id=org.acestream.node"
         target="_blank"
-        >Play Store</a
-      >
-      para Android.
+        >Google Play Store</a
+      >.
       <i
         class="bi bi-exclamation-triangle-fill"
         style="color: #ffc107; margin-right: 5px; vertical-align: middle"
       ></i>
-      <strong>No se puede instalar Ace Stream en dispositivos de Apple</strong>.
+      <strong>No se puede instalar y reproducir enlaces Ace Stream en dispositivos de Apple</strong>.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
@@ -416,7 +415,7 @@
       Ace Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca aquí el enlace al contenido".
     </p>
 
-    <h4 style="color: white; margin: 0 20px 20px 29px">Windows (PC o portátil)</h4>
+    <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
       los enlaces: la primera es haciendo clic directamente en el enlace,
