--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         </button>
         <div class="navbar-logo">
           <img
-            src="/images/logo.png"
+            src="/images/logo.svg"
             alt="Logo"
             class="logo"
             style="max-width: 100%; height: auto; width: auto; max-height: 70px; object-fit: contain;"
