Agregar instrucciones para instalar y usar Ace Stream en Android TV

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -415,6 +415,21 @@
       Ace Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca aquí el enlace al contenido".
     </p>
 
+    <h4 style="color: white; margin: 0 20px 20px 29px">Android TV</h4>
+    <p class="how-to-play-text">
+      Si tienes una TV o un dispositivo con Android TV, puedes instalar Ace Stream Engine haciendo clic 
+      <a href="https://mega.nz/file/gBkWiZQZ#wkxCu7wI02_adD6qBLYKDsMdtJQg_JobMCJkEv3J2_M" target="_blank">aquí</a> en tu móvil
+      (iOS o Android).
+      Para instalarlo en tu TV, usa la app "Send Files to TV" (<a href="https://play.google.com/store/apps/details?id=com.yablio.sendfilestotv" target="_blank">enlace</a>) para 
+      enviar el archivo APK a tu TV e instalarlo desde allí utilizando un gestor de archivos como ES File Explorer (disponible en Play Store en tu Android TV).
+      Una vez instalado, abre Ace Stream Engine y en la parte superior derecha, haz clic en los tres puntitos y selecciona "Ajustes". Allí, vete a ajustes del servidor,
+      y en Jugador seleccionado pon Ace Player.<br><br>
+      Para reproducir los enlaces, desde tu dispositivo móvil, accede a la web de Markel Links, copia el enlace que quieras reproducir y, utilizando la app "Control remoto para Android TV", 
+      pega el enlace en tu TV. Este enlace lo debes pegar en el cuadro que te sale al hacer clic en los tres puntitos de la parte superior derecha de Ace Stream en tu TV
+      y seleccionando "Introducir la ID de contenido". <br>
+      <a href="https://mega.nz/folder/AddSwK6J#E5L5EeZqvazk2eJLbtFzZg" target="_blank" style="font-size: x-large; ">Guía con fotos para reproducir en Android TV</a>
+    </p>
+
     <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
