Actualizar encabezados y descripciones para la sección de reproducción en Android y Windows

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -408,9 +408,9 @@
       <strong>No se puede instalar y reproducir enlaces Ace Stream en dispositivos de Apple</strong>.
     </p>
 
-    <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
+    <h4 style="color: white; margin: 0 20px 20px 29px">Móvil Android</h4>
     <p class="how-to-play-text">
-      Para reproducir los enlaces en tu Android, una vez instalado Ace Stream,
+      Para reproducir los enlaces en tu móvil Android, una vez instalado Ace Stream,
       puedes abrir el enlace haciendo clic en él directamente, y dándole a reproducir en Ace Player. También puedes copiar el enlace, abrir
       Ace Stream manualmente y pegar el enlace en el cuadro de texto de "Introduzca aquí el enlace al contenido".
     </p>
@@ -430,7 +430,7 @@
       <a href="https://mega.nz/folder/AddSwK6J#E5L5EeZqvazk2eJLbtFzZg" target="_blank" style="font-size: x-large; ">Guía con fotos para reproducir en Android TV</a>
     </p>
 
-    <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
+    <h4 style="color: white; margin: 0 20px 20px 29px">Windows (PC)</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
       los enlaces: la primera es haciendo clic directamente en el enlace,
