--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -448,12 +448,7 @@
 
     <p class="how-to-play-text">
       Para reproducir los enlaces correctamente en tu dispositivo, es
-      recomendable cambiar ciertos parámetros en la configuración de Ace Stream
-      y de Ace Player (de Ace Player, solo en Windows). Primero, haz clic
-      derecho sobre el icono de Ace Stream en la barra de tareas y selecciona
-      "Options..." (En Android, ir a los tres puntitos y ajustes). Allí, cambia los valores
-      de "VOD buffer" a 10 y "Live buffer" a 60 (En Android ir a Config. Ace Engine y Otros ajustes). Después, en Ace Player, ve en
-      la parte de arriba a "Herramientas"
+      recomendable cambiar este parámetro en la configuración de Ace Player. En la barra de arriba ve a "Herramientas"
       <i class="bi bi-arrow-right"></i> "Preferencias"
       <i class="bi bi-arrow-right"></i> "Vídeo" y en Desentrelazado selecciona
       "Automático" y Modo <i class="bi bi-arrow-right"></i> "Yadif (2x)".
