--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,6 +163,7 @@
       <i class="bi bi-arrow-down-short" style="font-size: x-large"></i>
     </button>
   </div>
+  <p class="last-update">Última actualización web: {{lastUpdate | date:'dd/MM/yyyy HH:mm'}}h</p>
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <div class="mini-separator"></div>
   <div class="futbol-tv-agendas">
