--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,12 +1,12 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">WIMBLEDON - TENIS (FINAL)</h3>
+  <h3 class="evento-text">US OPEN - TENIS</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Alcaraz vs. Sinner</strong
+    <strong>Alcaraz vs. Djokovic</strong
     >
-    &nbsp;<i class="bi bi-arrow-right"></i> 17:00h
+    &nbsp;<i class="bi bi-arrow-right"></i> 05/09 · 21:00h
   </span>
   <span class="agenda-text">
-    <a href="acestream://b2a4d1eba9b46df5f52a87105df779f9d39abeb4">OPCIÓN 1</a> | <a href="acestream://edd06f11e1cef292a1d795e15207ef2f580e298c">OPCIÓN 2</a>
+    Movistar Plus+ (recomendado) // M+ Deportes 2
   </span>
 </div>
