Actualizar texto de transmisión en el evento de tenis: eliminar "(recomendado)" de Movistar Plus+

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -6,7 +6,7 @@
     >
     &nbsp;<i class="bi bi-arrow-right"></i> 05/09 · 21:00h
   </span>
-  <span class="agenda-text">
-    Movistar Plus+ (recomendado) // M+ Deportes 2
+  <span style="font-weight: bold;">
+    Movistar Plus+ // M+ Deportes 2
   </span>
 </div>
